NOJIRA: Some FindBugs bugs fixed
git-svn-id: https://source.sakaiproject.org/svn/sitestats/ufp/sitestats/trunk@71925 66ffb92e-73f9-0310-93c1-f5514f145a0a